# dia-wasm-oracle

./: .gitignore  Cargo.toml  README.md  lib.rs
oracle/: Dockerfile  DockerfileRandom  ibm.sh  metadata.json  package-lock.json  package.json  randomoracle.json  tsconfig.json
oracle/script/: index.ts  random.ts
oracleexample/: Cargo.toml  build.sh  lib.rs
oracleexample/diadata/: Cargo.toml  lib.rs
random-wasm-oracle/diadatarandom/: Cargo.toml  lib.rs
random-wasm-oracle/example/: Cargo.toml  Readme.md  lib.rs
random-wasm-oracle/example/diadatarandom/: Cargo.toml  lib.rs
random-wasm-oracle/example/oracletraits/: Cargo.toml  lib.rs
