[package]
name = "randomoracle"
version = "4.0.1"
authors = ["DiaData <nitin.gurbani@diadata.org>"]
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "A Rust package for implementing a random oracle by DiaData."


[dependencies]
ink = { version = "4.0", default-features = false }
 
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",

]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []


